--- a/src/styles/partials/_recipe.scss
+++ b/src/styles/partials/_recipe.scss
@@ -1,7 +1,6 @@
 @use "./_variables" as *;
 
 .recipe {
-  margin: var(--spacing-0) var(--spacing-4) 95px var(--spacing-4); // Footer height & under construction banner
   margin-top: var(--spacing-12);
 
   header {
@@ -25,21 +24,52 @@
   }
 
   // Content styling
+  .bg-gray-50 {
+    // Dark mode only
+    .dark & {
+      background-color: var(--color-surface);
+    }
+  }
+
+  // List styling for Contentful content
+  ul {
+    list-style-type: disc;
+    margin-left: 1.5rem;
+    margin-bottom: 1rem;
+    
+    li {
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  ol {
+    list-style-type: decimal;
+    margin-left: 1.5rem;
+    margin-bottom: 1rem;
+    
+    li {
+      margin-bottom: 0.5rem;
+    }
+  }
+
   blockquote {
     border-left: 4px solid var(--color-highlight);
     padding-left: 1rem;
     margin: 1.5rem 0;
     font-style: italic;
     color: var(--color-text-light);
-    background-color: var(--color-surface);
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
     
     // Dark mode
     .dark & {
-      background-color: var(--color-surface);
       color: var(--color-text-light);
       border-left-color: var(--color-highlight);
+    }
+
+    &.pink {
+      border-left: none;
+      border-right: 4px solid var(--color-primary);
     }
   }
   
