--- a/src/styles/partials/_recipe.scss
+++ b/src/styles/partials/_recipe.scss
@@ -34,21 +34,35 @@
   // List styling for Contentful content
   ul {
     list-style-type: disc;
+    list-style-position: outside;
     margin-left: 1.5rem;
     margin-bottom: 1rem;
     
     li {
       margin-bottom: 0.5rem;
+      padding-left: 0.5rem;
+
+      p {
+        width: fit-content;
+        display: inline;
+      }
     }
   }
 
   ol {
     list-style-type: decimal;
+    list-style-position: outside;
     margin-left: 1.5rem;
     margin-bottom: 1rem;
     
     li {
       margin-bottom: 0.5rem;
+      padding-left: 0.5rem;
+
+      p {
+        width: fit-content;
+        display: inline;
+      }
     }
   }
 
