IMP Remove quick nav

--- a/src/pages/workshop/recipes/[slug].astro
+++ b/src/pages/workshop/recipes/[slug].astro
@@ -4,7 +4,6 @@ import BaseLayout from '../../../layouts/BaseLayout.astro';
 import { getAllRecipes, getRecipeBySlug } from '../../../lib/contentful';
 import { documentToHtmlString } from '@contentful/rich-text-html-renderer';
 import { BLOCKS } from '@contentful/rich-text-types';
-import QuickNavComponent from '@/components/quick-nav';
 
 export const getStaticPaths = (async () => {
   const recipes = await getAllRecipes();
@@ -36,9 +35,7 @@ const options = {
 ---
 
 <BaseLayout title={fullRecipe.name} description={"Recipe for " + fullRecipe.name}>
-  <QuickNavComponent client:load />
-
-  <div class="container mt-10 recipe">    
+  <div class="container recipe">    
     <div class="row">
       <div class="flex flex-row justify-between">
         <h1 class="text-2xl font-bold mb-2 ml-5">{fullRecipe.name}</h1>
