--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -61,3 +61,18 @@ hr {
     max-width: 1780px;
   }
 }
+
+.latest-block {
+    &.pink {
+      h2 {
+        color: var(--color-primary);
+        margin-top: 0;
+      }
+    }
+    &.blue {
+      h2 {
+        color: var(--color-secondary);
+        margin-top: 0;
+      }
+    }
+}
