--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ const recentPortfolioItem = portfolioItems.length > 0 ? portfolioItems[0] : null
         <div class="bg-gray-50 dark:bg-gray-800 p-6 rounded-lg">
           <h2 class="text-lg font-semibold mb-3">Latest Blog...</h2>
           <h3  class="text-lg font-bold text-center">
-            <a href={`/blog/${recentBlog.slug}`}>
+            <a href={`/blog-posts/${recentBlog.slug}`}>
               {recentBlog.title} →
             </a>
           </h3>
