--- a/src/pages/workshop/recipes/[slug].astro
+++ b/src/pages/workshop/recipes/[slug].astro
@@ -47,8 +47,8 @@ const options = {
       </div>
     </div>
     
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
-      <div class="lg:col-span-1">
+    <div class={`grid grid-cols-1 ${fullRecipe.imagesCollection && fullRecipe.imagesCollection.items.length > 0 ? 'lg:grid-cols-3' : 'lg:grid-cols-2'} gap-4`}>
+      <div>
         <div class="bg-gray-50 p-6 rounded-lg">
           <h2 class="text-xl font-semibold mb-4">Ingredients</h2>
           {fullRecipe.ingredients && (
@@ -57,33 +57,34 @@ const options = {
         </div>
       </div>
       
-      <div class="lg:col-span-1">
         {fullRecipe.imagesCollection && fullRecipe.imagesCollection.items.length > 0 && (
-          <div class="mb-8">
+          <div class="size-fit my-auto mx-auto">
             <img 
               src={fullRecipe.imagesCollection.items[0].url} 
               alt={fullRecipe.imagesCollection.items[0].title || fullRecipe.name}
               class="w-full h-96 object-cover rounded-lg"
             />
             {fullRecipe.imagesCollection.items[0].description && (
-              <p class="text-sm text-gray-600 mt-2 italic">{fullRecipe.imagesCollection.items[0].description}</p>
+              <p class="text-sm text-gray-600 mt-5 italic text-center">{fullRecipe.imagesCollection.items[0].description}</p>
             )}
           </div>
         )}
+        
+        <div class="flex flex-col md:gap-5 my-auto">
+          {fullRecipe.personalNote && (
+            <blockquote class="mt-2">
+              <h2 class="text-lg font-semibold mb-2">Personal Note</h2>
+              <p>{fullRecipe.personalNote}</p>
+            </blockquote>
+          )}
 
-        {fullRecipe.personalNote && (
-          <blockquote class="mt-2">
-            <h2 class="text-lg font-semibold mb-2">Personal Note</h2>
-            <p>{fullRecipe.personalNote}</p>
-          </blockquote>
-        )}
-
-        {fullRecipe.notes && (
-          <blockquote class="mt-2 pink">
-            <h2 class="text-lg font-semibold mb-2">Notes</h2>
-            <Fragment set:html={documentToHtmlString(fullRecipe.notes.json, options)} />
-          </blockquote>
-        )}
+          {fullRecipe.notes && (
+            <blockquote class="mt-2 pink">
+              <h2 class="text-lg font-semibold mb-2">Notes</h2>
+              <Fragment set:html={documentToHtmlString(fullRecipe.notes.json, options)} />
+            </blockquote>
+          )}
+        </div>
         
       </div>
     </div>
